[package]
name = "easy_rsa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89" }
rsa = { version = "0.9.6", features = ["sha2"]}
base64 = { version = "0.22.1" }
sha2 = { version = "0.10", features = ["oid"] }
sha1 = { version = "0.10", features = ["oid"] }
regex = { version = "1.10" }
rand = "0.8.5"
strum = { version = "0.26.3", features = ["derive"] }